feat: 修改棋盤顏色

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
   --bg-bottom:#f3e6d8;
   --panel:#ffffff;
   --board:#fff1dc;
-  --cell:#ffe6c9;
+  --cell:#ffffff;
   --pink:#ff7ab6;
   --blue:#6bb7ff;
   --text:#5a4632;
