pref: 優化並整理程式碼

--- a/index.html
+++ b/index.html
@@ -1,672 +1,52 @@
 <!doctype html>
 <html lang="zh-Hant">
 <head>
-<meta charset="utf-8"/>
-<title>Quarto 桌遊 AI 版本</title>
+  <meta charset="utf-8"/>
+  <title>Quarto 桌遊 AI 版本</title>
 
-<link rel="icon" type="image/png" href="icon.png">
+  <link rel="icon" type="image/png" href="icon.png">
 
-<meta name="description" content="Quarto 桌遊 AI 版本">
-<meta name="author" content="Your Name">
-<meta property="og:title" content="Quarto 桌遊 AI 版本">
-<meta property="og:description" content="以純 HTML / CSS / JS 製作的 Quarto 桌遊 AI 對戰版本">
-<meta property="og:image" content="icon.png">
-<meta property="og:type" content="website">
-<meta name="viewport" content="width=device-width, initial-scale=1"/>
+  <meta name="description" content="Quarto 桌遊 AI 版本">
+  <meta name="author" content="Your Name">
+  <meta property="og:title" content="Quarto 桌遊 AI 版本">
+  <meta property="og:description" content="以純 HTML / CSS / JS 製作的 Quarto 桌遊 AI 對戰版本">
+  <meta property="og:image" content="icon.png">
+  <meta property="og:type" content="website">
+  <meta name="viewport" content="width=device-width, initial-scale=1"/>
 
-<style>
-:root{
-  --bg-top:#fff8f1;
-  --bg-bottom:#f3e6d8;
-  --panel:#ffffff;
-  --board:#fff1dc;
-  --cell:#ffffff;
-  --pink:#ff7ab6;
-  --blue:#6bb7ff;
-  --text:#5a4632;
-  --accent:#ffb703;
-  --overlay:rgba(0,0,0,.4);
-}
-
-body{
-  margin:0;
-  background:linear-gradient(180deg,var(--bg-top),var(--bg-bottom));
-  font-family:"Noto Sans TC","Microsoft JhengHei",system-ui;
-  color:var(--text);
-}
-
-header{
-  padding:14px 20px;
-  font-weight:900;
-  background:var(--bg-top);
-}
-
-main{
-  max-width:1100px;
-  margin:auto;
-  padding:16px;
-  display:grid;
-  grid-template-columns:1.1fr .9fr;
-  gap:16px;
-}
-@media(max-width:900px){main{grid-template-columns:1fr}}
-
-.panel{
-  background:var(--panel);
-  border-radius:20px;
-  padding:16px;
-  box-shadow:0 8px 24px rgba(0,0,0,.06);
-}
-
-.board{
-  display:grid;
-  grid-template-columns:repeat(4,1fr);
-  gap:12px;
-  padding:14px;
-  background:var(--board);
-  border-radius:18px;
-}
-
-.cell{
-  aspect-ratio:1/1;
-  border-radius:16px;
-  background:var(--cell);
-  display:flex;
-  align-items:center;
-  justify-content:center;
-}
-.cell.filled{cursor:default}
-
-/* ✅ 最後一手框線 */
-.cell.last-move{
-  outline:4px solid var(--accent);
-  box-shadow:0 0 0 6px rgba(255,183,3,.35);
-}
-
-.pieces{
-  display:grid;
-  grid-template-columns:repeat(4,1fr);
-  gap:12px;
-}
-
-.pieceBtn{
-  aspect-ratio:1/1;
-  border-radius:16px;
-  background:#fff;
-  box-shadow:0 6px 12px rgba(0,0,0,.12);
-  display:flex;
-  align-items:center;
-  justify-content:center;
-  cursor:pointer;
-}
-.pieceBtn.used{opacity:.3;cursor:not-allowed}
-.pieceBtn.selected{
-  outline:4px solid var(--accent);
-  box-shadow:0 0 0 6px rgba(255,183,3,.4);
-}
-
-.resetBtn{
-  margin-top:16px;
-  width:100%;
-  padding:12px;
-  border:none;
-  border-radius:16px;
-  background:var(--accent);
-  font-weight:900;
-  cursor:pointer;
-}
-
-.status{
-  margin-top:12px;
-  padding:12px;
-  border-radius:14px;
-  background:var(--bg-top);
-}
-
-.overlay{
-  position:fixed;
-  inset:0;
-  background:var(--overlay);
-  display:none;
-  align-items:center;
-  justify-content:center;
-}
-.overlay.show{display:flex}
-
-.modal{
-  background:#fff;
-  border-radius:24px;
-  padding:24px;
-  width:min(90%,360px);
-  text-align:center;
-}
-.modal button{
-  margin-top:16px;
-  padding:10px 24px;
-  border:none;
-  border-radius:16px;
-  background:var(--accent);
-  font-weight:900;
-}
-.score{
-  margin-top:12px;
-  padding:12px;
-  border-radius:14px;
-  background:var(--bg-top);
-  display:flex;
-  align-items:center;
-  justify-content:space-between;
-  gap:12px;
-  font-weight:900;
-}
-.scoreBtn{
-  border:none;
-  border-radius:12px;
-  padding:8px 12px;
-  background:var(--accent);
-  font-weight:900;
-  cursor:pointer;
-}
-
-</style>
+  <link rel="stylesheet" href="styles.css">
+  <script src="app.js" defer></script>
 </head>
 
 <body>
-<header>Quarto｜可愛 2.5D 版（你 vs AI）</header>
+  <header>Quarto｜可愛 2.5D 版（你 vs AI）</header>
 
-<main>
-  <section class="panel">
-    <div class="board" id="board"></div>
+  <main>
+    <section class="panel">
+      <div class="board" id="board"></div>
 
-    <div class="score" id="score">
-      <div id="scoreText"></div>
-      <button class="scoreBtn" onclick="resetScore()">清除戰績</button>
+      <div class="score">
+        <!-- ✅ 先放預設文字：即使 JS 尚未執行也看得到 -->
+        <div id="scoreText">戰績｜你 0 勝 · AI 0 勝 · 0 平手</div>
+        <button class="scoreBtn" id="btnResetScore" type="button">清除戰績</button>
+      </div>
+
+      <div class="status" id="status"></div>
+    </section>
+
+    <section class="panel">
+      <h3>棋子</h3>
+      <div class="pieces" id="pieces"></div>
+      <button class="resetBtn" id="btnResetGame" type="button">再來一局</button>
+    </section>
+  </main>
+
+  <div class="overlay" id="overlay" aria-hidden="true">
+    <div class="modal" role="dialog" aria-modal="true" aria-labelledby="modalTitle">
+      <h2 id="modalTitle"></h2>
+      <p id="modalDesc"></p>
+      <button id="btnCloseModal" type="button">OK!</button>
     </div>
-
-    <div class="status" id="status"></div>
-  </section>
-
-  <section class="panel">
-    <h3>棋子</h3>
-    <div class="pieces" id="pieces"></div>
-    <button class="resetBtn" onclick="resetGame()">再來一局</button>
-  </section>
-</main>
-
-<div class="overlay" id="overlay">
-  <div class="modal">
-    <h2 id="modalTitle"></h2>
-    <p id="modalDesc"></p>
-    <button onclick="overlay.classList.remove('show')">OK!</button>
   </div>
-</div>
-
-<script>
-const pieces=[...Array(16)].map((_,i)=>({
-  id:i,color:(i>>3)&1,height:(i>>2)&1,shape:(i>>1)&1,hollow:i&1
-}));
-const AI_PRESET = {
-  chill:  { winProb: 0.85, defenseProb: 0.55, mistakeProb: 0.25, samplePieces: 5,  topK: 5 },
-  normal: { winProb: 0.95, defenseProb: 0.75, mistakeProb: 0.12, samplePieces: 8,  topK: 4 },
-  hard:   { winProb: 1.00, defenseProb: 0.92, mistakeProb: 0.05, samplePieces: 12, topK: 3 },
-};
-
-let AI = { ...AI_PRESET.normal };
-
-function rollAIMood(){
-  const moods = [
-    { name:"serious", defenseBoost:+0.12, mistakeBoost:-0.03 },
-    { name:"playful", defenseBoost:-0.18, mistakeBoost:+0.10 },
-    { name:"chaos",   defenseBoost:-0.30, mistakeBoost:+0.18 },
-  ];
-  const m = moods[(Math.random() * moods.length) | 0];
-  AI._mood = m.name;
-  AI._defense = clamp01(AI.defenseProb + m.defenseBoost);
-  AI._mistake = clamp01(AI.mistakeProb + m.mistakeBoost);
-}
-
-function setDifficulty(name){
-  AI = { ...AI_PRESET[name] };
-  rollAIMood();
-  // 你也可以把這行顯示在 UI 上
-  console.log("AI difficulty:", name, "mood:", AI._mood, AI);
-}
-
-function clamp01(x){ return Math.max(0, Math.min(1, x)); }
-function shuffle(arr){
-  const a = [...arr];
-  for(let i=a.length-1;i>0;i--){
-    const j = (Math.random()*(i+1))|0;
-    [a[i],a[j]]=[a[j],a[i]];
-  }
-  return a;
-}
-function pickOne(arr){ return arr[(Math.random()*arr.length)|0]; }
-
-let board=Array(16).fill(null);
-let used=Array(16).fill(false);
-let phase=0,selected=null,gameOver=false;
-let lastMoveIndex=null;
-
-const boardEl=document.getElementById("board");
-const piecesEl=document.getElementById("pieces");
-const statusEl=document.getElementById("status");
-const overlay=document.getElementById("overlay");
-const modalTitle=document.getElementById("modalTitle");
-const modalDesc=document.getElementById("modalDesc");
-
-function pieceSVG(p, size = 56) {
-  const topColor  = p.color ? "#6bb7ff" : "#ff7ab6";
-  const bodyColor = p.color ? "#9fd0ff" : "#ffb2d6";
-  const sideDark  = p.color ? "#3a6fa8" : "#d15b93";
-  const sideLight = p.color ? "#8fc3ff" : "#ff9fc9";
-
-  /* =========================
-     圓柱（Cylinder）
-     ========================= */
-  if (p.shape === 0) {
-    const h = p.height ? 64 : 30;
-    const cx = 50;
-    const rx = 28;
-    const ry = 10;
-    const topY = 26;
-    const bottomY = topY + h;
-
-    return `
-<svg width="${size}" height="${size}" viewBox="0 0 100 100">
-  <!-- 圓柱身體 -->
-  <path
-    fill="${bodyColor}"
-    d="
-      M ${cx - rx},${topY}
-      A ${rx},${ry} 0 0 0 ${cx + rx},${topY}
-      L ${cx + rx},${bottomY}
-      A ${rx},${ry} 0 0 1 ${cx - rx},${bottomY}
-      Z
-    "
-  />
-
-  <!-- 頂面 -->
-  <path
-    fill="${topColor}"
-    d="
-      M ${cx - rx},${topY}
-      A ${rx},${ry} 0 0 1 ${cx + rx},${topY}
-      A ${rx},${ry} 0 0 1 ${cx - rx},${topY}
-      Z
-    "
-  />
-
-  <!-- 中空 -->
-  ${
-    p.hollow
-      ? `<path
-          fill="#ffffff"
-          d="
-            M ${cx - 16},${topY}
-            A 16,7 0 0 1 ${cx + 16},${topY}
-            A 16,7 0 0 1 ${cx - 16},${topY}
-            Z
-          "
-        />`
-      : ""
-  }
-</svg>`;
-  }
-
-  /* =========================
-     立方體（Cuboid）
-     ========================= */
-  const HEIGHT = p.height ? 52 : 22;
-  const TOP_Y = 24;
-  const BASE_Y = TOP_Y + HEIGHT;
-
-  return `
-<svg width="${size}" height="${size}" viewBox="0 0 100 80">
-  <!-- 頂面 -->
-  <path
-    fill="${topColor}"
-    d="
-      M 20 ${TOP_Y}
-      L 50 ${TOP_Y - 14}
-      L 80 ${TOP_Y}
-      L 50 ${TOP_Y + 14}
-      Z
-    "
-  />
-
-  <!-- 左側面 -->
-  <path
-    fill="${sideDark}"
-    d="
-      M 20 ${TOP_Y}
-      L 50 ${TOP_Y + 14}
-      L 50 ${BASE_Y + 14}
-      L 20 ${BASE_Y}
-      Z
-    "
-  />
-
-  <!-- 右側面 -->
-  <path
-    fill="${sideLight}"
-    d="
-      M 50 ${TOP_Y + 14}
-      L 80 ${TOP_Y}
-      L 80 ${BASE_Y}
-      L 50 ${BASE_Y + 14}
-      Z
-    "
-  />
-
-  <!-- 中空 -->
-  ${
-    p.hollow
-      ? `<path
-          fill="#ffffff"
-          d="
-            M 50 ${TOP_Y - 6}
-            L 62 ${TOP_Y}
-            L 50 ${TOP_Y + 6}
-            L 38 ${TOP_Y}
-            Z
-          "
-        />`
-      : ""
-  }
-</svg>`;
-}
-
-const scoreEl = document.getElementById("score");
-const scoreTextEl = document.getElementById("scoreText");
-
-let score = loadScore();
-
-renderScore();
-
-function loadScore(){
-  try{
-    return JSON.parse(localStorage.getItem("quarto_score")) || { youWin:0, aiWin:0, draw:0 };
-  }catch{
-    return { youWin:0, aiWin:0, draw:0 };
-  }
-}
-function saveScore(){
-  localStorage.setItem("quarto_score", JSON.stringify(score));
-}
-function renderScore(){
-  scoreTextEl.textContent = `戰績｜你 ${score.youWin} 勝 · AI ${score.aiWin} 勝 · ${score.draw} 平手`;
-}
-function resetScore(){
-  score = { youWin:0, aiWin:0, draw:0 };
-  saveScore();
-  renderScore();
-}
-
-function render(){
-  boardEl.innerHTML="";
-  board.forEach((pid,i)=>{
-    const c=document.createElement("div");
-    c.className="cell"+(pid!==null?" filled":"")+(i===lastMoveIndex?" last-move":"");
-    if(pid!==null)c.innerHTML=pieceSVG(pieces[pid]);
-    c.onclick=()=>onBoard(i);
-    boardEl.appendChild(c);
-  });
-
-  piecesEl.innerHTML="";
-  pieces.forEach(p=>{
-    const d=document.createElement("div");
-    d.className="pieceBtn"+(used[p.id]?" used":"")+(p.id===selected?" selected":"");
-    d.innerHTML=pieceSVG(p);
-    d.onclick=()=>onPiece(p.id);
-    piecesEl.appendChild(d);
-  });
-}
-
-function onPiece(id){
-  if(gameOver||used[id]||phase!==0)return;
-  selected=id;phase=1;
-  statusEl.textContent="事件｜AI 正在放置你選的棋子…";
-  setTimeout(aiPlace,400);
-  render();
-}
-
-function onBoard(i){
-  if(gameOver||phase!==3||board[i]!=null)return;
-  board[i]=selected;used[selected]=true;
-  lastMoveIndex=i;selected=null;
-  render();
-  if(checkWin("你"))return;
-  phase=0;statusEl.textContent="戰績｜請選一顆棋子給 AI";
-}
-function estimateDangerAfterPlace(placeIndex){
-  const test=[...board];
-  test[placeIndex]=selected;
-
-  const empties=test.map((v,j)=>v===null?j:null).filter(v=>v!=null);
-
-  // 對手可用棋：抽樣（難度越高 samplePieces 越多）
-  const opponentPiecesAll = pieces.filter(p=>!used[p.id] && p.id!==selected);
-  const opponentPieces = shuffle(opponentPiecesAll).slice(0, Math.min(AI.samplePieces, opponentPiecesAll.length));
-
-  // danger = 抽樣棋中，有幾顆能讓玩家「下一手直接贏」
-  let danger=0;
-  for(const p of opponentPieces){
-    if(empties.some(e=>wouldWin(test, e, p.id))){
-      danger++;
-    }
-  }
-  return danger;
-}
-
-function cellBonus(i){
-  // 小小位置偏好：中心 > 角落 > 其他（讓 AI 看起來比較像人）
-  const center = [5,6,9,10];
-  const corners = [0,3,12,15];
-  if(center.includes(i)) return 2;
-  if(corners.includes(i)) return 1;
-  return 0;
-}
-
-function aiPlace(){
-  const empty=board.map((v,i)=>v===null?i:null).filter(v=>v!=null);
-
-  // 1) 有立即勝利就「大多數時候」會拿
-  const winningMoves=[];
-  for(const i of empty){
-    if(wouldWin(board,i,selected)) winningMoves.push(i);
-  }
-  if(winningMoves.length && Math.random() < AI.winProb){
-    placeAt(pickOne(winningMoves));
-    return;
-  }
-
-  // 2) 依 danger + 位置偏好 評分
-  const moves = empty.map(i=>{
-    const danger = estimateDangerAfterPlace(i);
-    const bonus = cellBonus(i);
-    return { i, danger, bonus, r: Math.random() };
-  });
-
-  // defense 機率：不是每次都啟用「超嚴格防守」
-  const defenseOn = Math.random() < (AI._defense ?? AI.defenseProb);
-
-  moves.sort((a,b)=>{
-    if(defenseOn && a.danger !== b.danger) return a.danger - b.danger; // 越安全越前
-    if(a.bonus !== b.bonus) return b.bonus - a.bonus;                 // 偏好中心/角落
-    return a.r - b.r;                                                 // 打散
-  });
-
-  // 3) TopK 隨機 + 偶爾犯錯（選到更後面）
-  const topK = Math.min(AI.topK, moves.length);
-  const mistake = Math.random() < (AI._mistake ?? AI.mistakeProb);
-
-  let pick;
-  if(!mistake){
-    pick = moves[(Math.random() * topK) | 0];
-  }else{
-    // 往後面挑，製造「有機會漏防」的樂趣
-    const start = topK;
-    const end = Math.min(moves.length, topK + 4);
-    pick = moves[start + ((Math.random() * Math.max(1, end - start)) | 0)] ?? moves[moves.length-1];
-  }
-
-  placeAt(pick.i);
-}
-
-function placeAt(i){
-  board[i]=selected;
-  used[selected]=true;
-  lastMoveIndex=i;
-  selected=null;
-
-  render();
-
-  if(checkWin("AI"))return;
-  phase=2;
-  setTimeout(aiSelect,300);
-}
-
-function aiSelect(){
-  const candidates=pieces.filter(p=>!used[p.id]);
-
-  // 1️⃣ 不給你「一放就贏」的棋
-  const safe=candidates.filter(p=>{
-    const empties=board.map((v,i)=>v===null?i:null).filter(v=>v!=null);
-    return !empties.some(i=>wouldWin(board,i,p.id));
-  });
-
-  // 2️⃣ 優先給「屬性分散」的棋
-  function score(p){
-    let s=0;
-    ["color","height","shape","hollow"].forEach(a=>{
-      const values=board
-        .filter(v=>v!==null)
-        .map(id=>pieces[id][a]);
-      if(values.includes(p[a])) s++;
-    });
-    return s;
-  }
-
-  const pool=safe.length?safe:candidates;
-  pool.sort((a,b)=>score(b)-score(a));
-
-  selected=pool[0].id;
-  phase=3;
-  statusEl.textContent="事件｜請把右側被框起來的棋子放上棋盤";
-  render();
-}
-
-function simulateWin(testBoard){
-  const lines=[
-    [0,1,2,3],[4,5,6,7],[8,9,10,11],[12,13,14,15],
-    [0,4,8,12],[1,5,9,13],[2,6,10,14],[3,7,11,15],
-    [0,5,10,15],[3,6,9,12]
-  ];
-  const attrs=["color","height","shape","hollow"];
-
-  for(const l of lines){
-    const ids=l.map(i=>testBoard[i]);
-    if(ids.some(v=>v===null))continue;
-    const ps=ids.map(id=>pieces[id]);
-    for(const a of attrs){
-      if(ps.every(p=>p[a]===ps[0][a])) return true;
-    }
-  }
-  return false;
-}
-
-function wouldWin(board, index, pieceId){
-  const copy=[...board];
-  copy[index]=pieceId;
-  return simulateWin(copy);
-}
-
-function showModal(t,d){
-  modalTitle.textContent=t;
-  modalDesc.innerHTML=d;
-  overlay.classList.add("show");
-}
-
-function checkWin(who){
-  const lines = [
-    [0,1,2,3,"第1橫列"],[4,5,6,7,"第2橫列"],
-    [8,9,10,11,"第3橫列"],[12,13,14,15,"第4橫列"],
-    [0,4,8,12,"第1直行"],[1,5,9,13,"第2直行"],
-    [2,6,10,14,"第3直行"],[3,7,11,15,"第4直行"],
-    [0,5,10,15,"左上 → 右下"],[3,6,9,12,"右上 → 左下"]
-  ];
-
-  const attrs = [
-    ["color","顏色"],
-    ["height","高度"],
-    ["shape","形狀"],
-    ["hollow","空心 / 實心"]
-  ];
-
-  for(const l of lines){
-    const ids = l.slice(0,4).map(i => board[i]);
-    if(ids.some(v => v === null)) continue;
-
-    const ps = ids.map(id => pieces[id]);
-
-    for(const [attr, name] of attrs){
-      if(ps.every(p => p[attr] === ps[0][attr])){
-        gameOver = true;
-
-        // 👉 若你有做「勝利線框起來」，可以順便記住
-        // winCells = l.slice(0,4);
-
-        if(who === "你") score.youWin++;
-        else if(who === "AI") score.aiWin++;
-        saveScore();
-        renderScore();
-
-        showModal(
-          `${who} 獲勝 🎉`,
-          `
-            <div style="line-height:1.7">
-              <strong>獲勝屬性：</strong>${name}<br>
-              <strong>獲勝位置：</strong>${l[4]}
-            </div>
-          `
-        );
-
-        render();
-        return true;
-      }
-    }
-  }
-
-  // 平手
-  if(used.every(v => v)){
-    gameOver = true;
-    showModal(
-      "平手 🤝",
-      "棋子已全部用完，雙方勢均力敵！"
-    );
-    score.draw++;
-    saveScore();
-    renderScore();
-    return true;
-  }
-
-  return false;
-}
-
-function resetGame(){
-  overlay.classList.remove("show");
-  board=Array(16).fill(null);
-  used=Array(16).fill(false);
-  phase=0;selected=null;gameOver=false;
-  lastMoveIndex=null;
-  statusEl.textContent="事件｜請選一顆棋子給 AI";
-  rollAIMood();
-  render();
-}
-
-statusEl.textContent="事件｜請選一顆棋子給 AI";
-render();
-</script>
 </body>
 </html>
