--- a/index.html
+++ b/index.html
@@ -36,6 +36,13 @@
 
     <section class="panel">
       <h3>棋子</h3>
+      <div class="aiBar">
+        <span class="aiLabel">AI 模式</span>
+        <select id="aiMode">
+          <option value="normal">一般模式</option>
+          <option value="hardcore">困難模式</option>
+        </select>
+      </div>
       <div class="pieces" id="pieces"></div>
       <button class="resetBtn" id="btnResetGame" type="button">再來一局</button>
     </section>
