feat: 補上計時時間

--- a/index.html
+++ b/index.html
@@ -26,8 +26,8 @@
       <div class="board" id="board"></div>
 
       <div class="score">
-        <!-- ✅ 先放預設文字：即使 JS 尚未執行也看得到 -->
         <div id="scoreText">戰績｜你 0 勝 · AI 0 勝 · 0 平手</div>
+        <div id="timerText"></div>
         <button class="scoreBtn" id="btnResetScore" type="button">清除戰績</button>
       </div>
 
