--- a/index.html
+++ b/index.html
@@ -4,13 +4,13 @@
   <meta charset="utf-8"/>
   <title>Quarto 桌遊 AI 版本</title>
 
-  <link rel="icon" type="image/png" href="icon.png">
+  <link rel="icon" type="image/png" href="image/icon.png">
 
   <meta name="description" content="Quarto 桌遊 AI 版本">
   <meta name="author" content="Your Name">
   <meta property="og:title" content="Quarto 桌遊 AI 版本">
   <meta property="og:description" content="以純 HTML / CSS / JS 製作的 Quarto 桌遊 AI 對戰版本">
-  <meta property="og:image" content="icon.png">
+  <meta property="og:image" content="image/icon.png">
   <meta property="og:type" content="website">
   <meta name="viewport" content="width=device-width, initial-scale=1"/>
 
